add br-text on background img

--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
         </nav>
     </header>
     <main>
-        <div class="hero-section">
+        <div class="hero-section d-flex align-items-center">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col">
-
+                        <div>
+                            <h1 class="text-white text-center mb-0"><span class="d-inline-block p-2 br-text">BR</span> <span class="d-none d-sm-inline-block">Architects</span></h1>
+                        </div>
                     </div>
                 </div>
             </div>
