--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <!-- navbar -->
-    <header>
+    <header class="sticky-top">
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <div class="container">
                 <a class="navbar-brand" href="#">Navbar</a>
@@ -40,15 +40,25 @@
         </nav>
     </header>
     <main>
-        <div class="hero-section d-flex align-items-center">
+        <div class="hero-section d-flex align-items-center position-relative">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col">
                         <div>
-                            <h1 class="text-white text-center mb-0"><span class="d-inline-block p-2 br-text">BR</span> <span class="d-none d-sm-inline-block">Architects</span></h1>
+                            <h1 class="text-white text-center mb-0"><span class="d-inline-block p-2 br-text">BR</span>
+                                <span class="d-none d-sm-inline-block">Architects</span>
+                            </h1>
                         </div>
                     </div>
                 </div>
+            </div>
+            <!-- wave svg -->
+            <div class="position-absolute bottom-0" style="width: 100%;">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                    <path fill="#fff" fill-opacity="1"
+                        d="M0,320L34.3,298.7C68.6,277,137,235,206,192C274.3,149,343,107,411,122.7C480,139,549,213,617,250.7C685.7,288,754,288,823,250.7C891.4,213,960,139,1029,106.7C1097.1,75,1166,85,1234,122.7C1302.9,160,1371,224,1406,256L1440,288L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z">
+                    </path>
+                </svg>
             </div>
         </div>
     </main>
