--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="sticky-top">
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <div class="container">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand nav-link" href="#"><strong>BR</strong> Architects</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -26,13 +26,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="#projects">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Link</a>
+                            <a class="nav-link active" href="#about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active">Disabled</a>
+                            <a class="nav-link active" href="#contact">Contacts</a>
                         </li>
                     </ul>
                 </div>
@@ -53,12 +53,75 @@
                 </div>
             </div>
             <!-- wave svg -->
-            <div class="position-absolute bottom-0" style="width: 100%;">
+            <div class="position-absolute" style="width: 100%; bottom: -1px;">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
                     <path fill="#fff" fill-opacity="1"
                         d="M0,320L34.3,298.7C68.6,277,137,235,206,192C274.3,149,343,107,411,122.7C480,139,549,213,617,250.7C685.7,288,754,288,823,250.7C891.4,213,960,139,1029,106.7C1097.1,75,1166,85,1234,122.7C1302.9,160,1371,224,1406,256L1440,288L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z">
                     </path>
                 </svg>
+            </div>
+        </div>
+        <!-- projects section -->
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col">
+                    <h2 class="fw-normal">Projects</h2>
+                    <hr>
+                </div>
+            </div>
+        </div>
+        <div class="container mt-5" id="span-bg">
+            <div class="row">
+                <div class="col-12 col-sm-6 col-md-3 mb-2">
+                    <div class="card border-0 rounded-0">
+                        <span class="position-absolute top-0 px-3 py-2 text-white">Summer House</span>
+                        <img src="assets/images/house5.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-3 mb-2">
+                    <div class="card border-0 rounded-0">
+                         <span class="position-absolute top-0 px-3 py-2 text-white">Brick House</span>
+                        <img src="assets/images/house2.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-3 mb-2">
+                    <div class="card border-0 rounded-0">
+                         <span class="position-absolute top-0 px-3 py-2 text-white">Renovated</span>
+                        <img src="assets/images/house3.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-3 mb-2">
+                    <div class="card border-0 rounded-0">
+                         <span class="position-absolute top-0 px-3 py-2 text-white">Barn House</span>
+                        <img src="assets/images/house4.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-sm-6 col-md-3 mb-2">
+                    <div class="card border-0 rounded-0">
+                         <span class="position-absolute top-0 px-3 py-2 text-white">Summer House</span>
+                        <img src="assets/images/house2.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-3 mb-2">
+                    <div class="card border-0 rounded-0">
+                         <span class="position-absolute top-0 px-3 py-2 text-white">Brick House</span>
+                        <img src="assets/images/house5.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-3 mb-2">
+                    <div class="card border-0 rounded-0">
+                         <span class="position-absolute top-0 px-3 py-2 text-white">Renovated</span>
+                        <img src="assets/images/house4.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-3 mb-2">
+                    <div class="card border-0 rounded-0">
+                         <span class="position-absolute top-0 px-3 py-2 text-white">Barn House</span>
+                        <img src="assets/images/house3.jpg" alt="">
+                    </div>
+                </div>
             </div>
         </div>
     </main>
