create about section in index.html file and Tweaks in css file

--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@
                 </div>
                 <div class="col-12 col-sm-6 col-md-3 mb-2">
                     <div class="card border-0 rounded-0">
-                         <span class="position-absolute top-0 px-3 py-2 text-white">Brick House</span>
+                        <span class="position-absolute top-0 px-3 py-2 text-white">Brick House</span>
                         <img src="assets/images/house2.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-3 mb-2">
                     <div class="card border-0 rounded-0">
-                         <span class="position-absolute top-0 px-3 py-2 text-white">Renovated</span>
+                        <span class="position-absolute top-0 px-3 py-2 text-white">Renovated</span>
                         <img src="assets/images/house3.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-3 mb-2">
                     <div class="card border-0 rounded-0">
-                         <span class="position-absolute top-0 px-3 py-2 text-white">Barn House</span>
+                        <span class="position-absolute top-0 px-3 py-2 text-white">Barn House</span>
                         <img src="assets/images/house4.jpg" alt="">
                     </div>
                 </div>
@@ -100,30 +100,90 @@
             <div class="row">
                 <div class="col-12 col-sm-6 col-md-3 mb-2">
                     <div class="card border-0 rounded-0">
-                         <span class="position-absolute top-0 px-3 py-2 text-white">Summer House</span>
+                        <span class="position-absolute top-0 px-3 py-2 text-white">Summer House</span>
                         <img src="assets/images/house2.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-3 mb-2">
                     <div class="card border-0 rounded-0">
-                         <span class="position-absolute top-0 px-3 py-2 text-white">Brick House</span>
+                        <span class="position-absolute top-0 px-3 py-2 text-white">Brick House</span>
                         <img src="assets/images/house5.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-3 mb-2">
                     <div class="card border-0 rounded-0">
-                         <span class="position-absolute top-0 px-3 py-2 text-white">Renovated</span>
+                        <span class="position-absolute top-0 px-3 py-2 text-white">Renovated</span>
                         <img src="assets/images/house4.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-3 mb-2">
                     <div class="card border-0 rounded-0">
-                         <span class="position-absolute top-0 px-3 py-2 text-white">Barn House</span>
+                        <span class="position-absolute top-0 px-3 py-2 text-white">Barn House</span>
                         <img src="assets/images/house3.jpg" alt="">
                     </div>
                 </div>
             </div>
         </div>
+        <!-- About Section -->
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col">
+                    <h2 class="fw-normal">About</h2>
+                    <hr>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident,
+                        sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed
+                        do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </p>
+                </div>
+            </div>
+            <div class="row mt-4">
+                <div class="col-12 col-sm-6 col-md-3">
+                    <div class="card border-0 rounded-0 card-btn">
+                        <img src="assets/images/team2.jpg" class="card-img-top rounded-0" alt="...">
+                        <h3 class="card-title mt-3">Jhon Doe</h3>
+                        <p class="text-muted">CEO &amp; Founder</p>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="d-block text-white text-center py-2 text-decoration-none">Go somewhere</a>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-3">
+                    <div class="card border-0 rounded-0 card-btn">
+                        <img src="assets/images/team1.jpg" class="card-img-top rounded-0" alt="...">
+                        <h3 class="card-title mt-3">Jane Doe</h3>
+                        <p class="text-muted">Architects</p>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="d-block text-white text-center py-2 text-decoration-none">Go somewhere</a>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-3">
+                    <div class="card border-0 rounded-0 card-btn">
+                        <img src="assets/images/team3.jpg" class="card-img-top rounded-0" alt="...">
+                        <h3 class="card-title mt-3">Mike Ross</h3>
+                        <p class="text-muted">Architects</p>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="d-block text-white text-center py-2 text-decoration-none">Go somewhere</a>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-3">
+                    <div class="card border-0 rounded-0 card-btn">
+                        <img src="assets/images/team4.jpg" class="card-img-top rounded-0" alt="...">
+                        <h3 class="card-title mt-3">Dan Star</h3>
+                        <p class="text-muted">Architects</p>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="d-block text-white text-center py-2 text-decoration-none">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- contact Section -->
     </main>
     <!-- Boottrap js CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
