--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- navbar -->
     <header class="sticky-top">
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark shadow-lg">
             <div class="container">
                 <a class="navbar-brand nav-link" href="#"><strong>BR</strong> Architects</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -54,7 +54,7 @@
             </div>
             <!-- wave svg -->
             <div class="position-absolute" style="width: 100%; bottom: -1px;">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" id="projects">
                     <path fill="#fff" fill-opacity="1"
                         d="M0,320L34.3,298.7C68.6,277,137,235,206,192C274.3,149,343,107,411,122.7C480,139,549,213,617,250.7C685.7,288,754,288,823,250.7C891.4,213,960,139,1029,106.7C1097.1,75,1166,85,1234,122.7C1302.9,160,1371,224,1406,256L1440,288L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z">
                     </path>
@@ -75,25 +75,25 @@
                 <div class="col-12 col-sm-6 col-md-3 mb-2">
                     <div class="card border-0 rounded-0">
                         <span class="position-absolute top-0 px-3 py-2 text-white">Summer House</span>
-                        <img src="assets/images/house5.jpg" alt="">
+                        <img src="assets/images/house5.jpg" alt="house5">
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-3 mb-2">
                     <div class="card border-0 rounded-0">
                         <span class="position-absolute top-0 px-3 py-2 text-white">Brick House</span>
-                        <img src="assets/images/house2.jpg" alt="">
+                        <img src="assets/images/house2.jpg" alt="house2">
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-3 mb-2">
                     <div class="card border-0 rounded-0">
                         <span class="position-absolute top-0 px-3 py-2 text-white">Renovated</span>
-                        <img src="assets/images/house3.jpg" alt="">
+                        <img src="assets/images/house3.jpg" alt="house3">
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-3 mb-2">
                     <div class="card border-0 rounded-0">
                         <span class="position-absolute top-0 px-3 py-2 text-white">Barn House</span>
-                        <img src="assets/images/house4.jpg" alt="">
+                        <img src="assets/images/house4.jpg" alt="house4">
                     </div>
                 </div>
             </div>
@@ -101,25 +101,25 @@
                 <div class="col-12 col-sm-6 col-md-3 mb-2">
                     <div class="card border-0 rounded-0">
                         <span class="position-absolute top-0 px-3 py-2 text-white">Summer House</span>
-                        <img src="assets/images/house2.jpg" alt="">
+                        <img src="assets/images/house2.jpg" alt="house2">
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-3 mb-2">
                     <div class="card border-0 rounded-0">
                         <span class="position-absolute top-0 px-3 py-2 text-white">Brick House</span>
-                        <img src="assets/images/house5.jpg" alt="">
+                        <img src="assets/images/house5.jpg" alt="house5">
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-3 mb-2">
                     <div class="card border-0 rounded-0">
                         <span class="position-absolute top-0 px-3 py-2 text-white">Renovated</span>
-                        <img src="assets/images/house4.jpg" alt="">
+                        <img src="assets/images/house4.jpg" alt="house4">
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-3 mb-2">
                     <div class="card border-0 rounded-0">
                         <span class="position-absolute top-0 px-3 py-2 text-white">Barn House</span>
-                        <img src="assets/images/house3.jpg" alt="">
+                        <img src="assets/images/house3.jpg" alt="house3" id="about">
                     </div>
                 </div>
             </div>
@@ -141,50 +141,116 @@
                 </div>
             </div>
             <div class="row mt-4">
-                <div class="col-12 col-sm-6 col-md-3">
-                    <div class="card border-0 rounded-0 card-btn">
-                        <img src="assets/images/team2.jpg" class="card-img-top rounded-0" alt="...">
-                        <h3 class="card-title mt-3">Jhon Doe</h3>
-                        <p class="text-muted">CEO &amp; Founder</p>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="d-block text-white text-center py-2 text-decoration-none">Go somewhere</a>
+                <div class="col-12 col-sm-6 col-md-3 mb-2 mb-sm-2 mb-md-0">
+                    <div class="card border-0 card-btn zoom-effect">
+                        <img src="assets/images/team2.jpg" class="card-img-top" alt="team2">
+                        <div class="card-body">
+                            <h3 class="card-title">Jhon Doe</h3>
+                            <p class="text-muted">CEO &amp; Founder</p>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of
+                                the card's content.</p>
+                            <a href="#" class="d-block text-white text-center py-2 text-decoration-none">Contact</a>
+                        </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-md-3">
-                    <div class="card border-0 rounded-0 card-btn">
-                        <img src="assets/images/team1.jpg" class="card-img-top rounded-0" alt="...">
-                        <h3 class="card-title mt-3">Jane Doe</h3>
-                        <p class="text-muted">Architects</p>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="d-block text-white text-center py-2 text-decoration-none">Go somewhere</a>
+                <div class="col-12 col-sm-6 col-md-3 mb-2 mb-sm-2 mb-md-0">
+                    <div class="card border-0 card-btn zoom-effect">
+                        <img src="assets/images/team1.jpg" class="card-img-top" alt="team1">
+                        <div class="card-body">
+                            <h3 class="card-title">Jane Doe</h3>
+                            <p class="text-muted">Architects</p>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of
+                                the card's content.</p>
+                            <a href="#" class="d-block text-white text-center py-2 text-decoration-none">Contact</a>
+                        </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-md-3">
-                    <div class="card border-0 rounded-0 card-btn">
-                        <img src="assets/images/team3.jpg" class="card-img-top rounded-0" alt="...">
-                        <h3 class="card-title mt-3">Mike Ross</h3>
-                        <p class="text-muted">Architects</p>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="d-block text-white text-center py-2 text-decoration-none">Go somewhere</a>
+                <div class="col-12 col-sm-6 col-md-3 mb-2 mb-sm-2 mb-md-0">
+                    <div class="card border-0 card-btn zoom-effect">
+                        <img src="assets/images/team3.jpg" class="card-img-top" alt="team3">
+                        <div class="card-body">
+                            <h3 class="card-title">Mike Ross</h3>
+                            <p class="text-muted">Architects</p>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of
+                                the card's content.</p>
+                            <a href="#" class="d-block text-white text-center py-2 text-decoration-none">Contact</a>
+                        </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-md-3">
-                    <div class="card border-0 rounded-0 card-btn">
-                        <img src="assets/images/team4.jpg" class="card-img-top rounded-0" alt="...">
-                        <h3 class="card-title mt-3">Dan Star</h3>
-                        <p class="text-muted">Architects</p>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="d-block text-white text-center py-2 text-decoration-none">Go somewhere</a>
+                <div class="col-12 col-sm-6 col-md-3 mb-2 mb-sm-2 mb-md-0">
+                    <div class="card border-0 card-btn zoom-effect">
+                        <img src="assets/images/team4.jpg" class="card-img-top" alt="team4">
+                        <div class="card-body">
+                            <h3 class="card-title">Dan Star</h3>
+                            <p class="text-muted">Architects</p>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of
+                                the card's content.</p>
+                            <a href="" class="d-block text-white text-center py-2 text-decoration-none"
+                                id="contact">Contact</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
         <!-- contact Section -->
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col">
+                    <h2 class="fw-normal">Contacts</h2>
+                    <hr>
+                    <p>Lets get in touch and talk about your next project.</p>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <form>
+                        <div class="mb-3">
+                            <input type="text" class="form-control focus-ring focus-ring-light" placeholder="Name"
+                                name="Name">
+                        </div>
+                        <div class="mb-3">
+                            <input type="email" class="form-control focus-ring focus-ring-light" placeholder="Email"
+                                name="Email">
+                        </div>
+                        <div class="mb-3">
+                            <input type="text" class="form-control focus-ring focus-ring-light" placeholder="Subjects"
+                                name="Subject">
+                        </div>
+                        <div class="mb-3">
+                            <input type="text" class="form-control focus-ring focus-ring-light" placeholder="Comments"
+                                name="Comment">
+                        </div>
+                        <div class="mb-3">
+                            <input type="submit" class="btn bg-black text-white" value="Send Message"></input>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <!-- map section -->
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col">
+                    <img src="assets/images/map.jpg" class="img-fluid" alt="">
+                </div>
+            </div>
+        </div>
     </main>
+    <footer class="mt-3">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <p class="text-center text-white mb-0 py-2">&copy; 2024 All Rights Reserved.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
     <!-- Boottrap js CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
